Fix ouput corruption

Returning the internal data of a QByteArray from a local function
caused strange results such as output being repeated.
Fix by returning the QByteArray and calling its constData() when
streaming into the Std C++ output stream
BUG: 274937