console/kabcclient/src/outputformatimpls.cpp
@@ -40,11 +40,11 @@ using namespace KABC;
 
 ///////////////////////////////////////////////////////////////////////////////
 
-static const char* fromUnicode(QTextCodec* codec, const QString& text)
+QByteArray fromUnicode(QTextCodec* codec, const QString& text)
 {
-    if (codec == 0) return "";
+    if (codec == 0) return QByteArray();
 
-    return codec->fromUnicode(text).data();
+    return codec->fromUnicode(text);
 }
 
 ///////////////////////////////////////////////////////////////////////////////
@@ -79,7 +79,7 @@ bool UIDOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream& s
 {
     if (stream.bad()) return false;
 
-    stream << fromUnicode(m_codec, addressee.uid());
+    stream << fromUnicode(m_codec, addressee.uid()).constData();
 
     return !stream.bad();
 }
@@ -200,7 +200,7 @@ bool VCardOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream&
     }
 
     QString vcard = m_converter->createVCard(addressee, version);
-    stream << fromUnicode(m_codec, vcard);
+    stream << fromUnicode(m_codec, vcard).constData();
 
     return !stream.bad();
 }
@@ -231,7 +231,7 @@ bool VCardOutput::writeAddresseeList(const KABC::AddresseeList& addresseeList,
     }
 
     QString vcards = m_converter->createVCards(addresseeList, version);
-    stream << fromUnicode(m_codec, vcards);
+    stream << fromUnicode(m_codec, vcards).constData();
 
     return !stream.bad();
 }
@@ -318,7 +318,7 @@ bool EmailOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream&
         {
             if (!(*it).isEmpty())
             {
-                stream << fromUnicode(m_codec, decorateEmail(addressee, *it));
+                stream << fromUnicode(m_codec, decorateEmail(addressee, *it)).constData();
                 if (stream.bad()) return false;
             }
 
@@ -327,7 +327,7 @@ bool EmailOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream&
                 if ((*it).isEmpty()) continue;
 
                 stream << std::endl
-                       << fromUnicode(m_codec, decorateEmail(addressee, *it));
+                       << fromUnicode(m_codec, decorateEmail(addressee, *it)).constData();
 
                 if (stream.bad()) return false;
             }
@@ -337,7 +337,7 @@ bool EmailOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream&
     {
         if (!addressee.preferredEmail().isEmpty())
         {
-            stream << fromUnicode(m_codec, decorateEmail(addressee, addressee.preferredEmail()));
+            stream << fromUnicode(m_codec, decorateEmail(addressee, addressee.preferredEmail())).constData();
         }
     }
 
@@ -481,16 +481,16 @@ bool MuttOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream& 
             {
                 if (m_queryFormat)
                 {
-                    stream << fromUnicode(m_codec, *it) << "\t"
-                           << fromUnicode(m_codec, addressee.givenName()) << " "
-                           << fromUnicode(m_codec, addressee.familyName());
+                    stream << fromUnicode(m_codec, *it).constData() << "\t"
+                           << fromUnicode(m_codec, addressee.givenName()).constData() << " "
+                           << fromUnicode(m_codec, addressee.familyName()).constData();
                 }
                 else
                 {
-                    stream << "alias " << fromUnicode(m_codec, keyString) << "\t";
-                    stream << fromUnicode(m_codec, addressee.givenName()) << " "
-                           << fromUnicode(m_codec, addressee.familyName())<< " <"
-                           << fromUnicode(m_codec, *it)                   << ">";
+                    stream << "alias " << fromUnicode(m_codec, keyString).constData() << "\t";
+                    stream << fromUnicode(m_codec, addressee.givenName()).constData() << " "
+                           << fromUnicode(m_codec, addressee.familyName()).constData()<< " <"
+                           << fromUnicode(m_codec, *it).constData()                   << ">";
                 }
 
                 if (stream.bad()) return false;
@@ -503,24 +503,24 @@ bool MuttOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream& 
 
                 if (m_queryFormat && count == 1)
                 {
-                    stream << "\t" << fromUnicode(m_codec, i18n("preferred"));
+                    stream << "\t" << fromUnicode(m_codec, i18n("preferred")).constData();
                 }
 
                 stream << std::endl;
                 if (m_queryFormat)
                 {
-                    stream << fromUnicode(m_codec, *it) << "\t"
-                           << fromUnicode(m_codec,  addressee.givenName()) << " "
-                           << fromUnicode(m_codec, addressee.familyName()) << "\t"
+                    stream << fromUnicode(m_codec, *it).constData() << "\t"
+                           << fromUnicode(m_codec,  addressee.givenName()).constData() << " "
+                           << fromUnicode(m_codec, addressee.familyName()).constData() << "\t"
                            << "#" << count;
                 }
                 else
                 {
-                    stream << "alias " << fromUnicode(m_codec, keyString)
+                    stream << "alias " << fromUnicode(m_codec, keyString).constData()
                            << count << "\t";
-                    stream << fromUnicode(m_codec, addressee.givenName())  << " "
-                           << fromUnicode(m_codec, addressee.familyName()) << " <"
-                           << fromUnicode(m_codec, *it)                    << ">";
+                    stream << fromUnicode(m_codec, addressee.givenName()).constData()  << " "
+                           << fromUnicode(m_codec, addressee.familyName()).constData() << " <"
+                           << fromUnicode(m_codec, *it).constData()                    << ">";
                 }
 
                 if (stream.bad()) return false;
@@ -533,16 +533,16 @@ bool MuttOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream& 
         {
             if (m_queryFormat)
             {
-                stream << fromUnicode(m_codec, addressee.preferredEmail()) << "\t"
-                       << fromUnicode(m_codec, addressee.givenName())      << " "
-                       << fromUnicode(m_codec, addressee.familyName());
+                stream << fromUnicode(m_codec, addressee.preferredEmail()).constData() << "\t"
+                       << fromUnicode(m_codec, addressee.givenName()).constData()      << " "
+                       << fromUnicode(m_codec, addressee.familyName()).constData();
             }
             else
             {
-                stream << "alias " << fromUnicode(m_codec, key(addressee)) << "\t";
-                stream << fromUnicode(m_codec, addressee.givenName())      << " "
-                       << fromUnicode(m_codec, addressee.familyName())     << " <"
-                       << fromUnicode(m_codec, addressee.preferredEmail()) << ">";
+                stream << "alias " << fromUnicode(m_codec, key(addressee)).constData() << "\t";
+                stream << fromUnicode(m_codec, addressee.givenName()).constData()      << " "
+                       << fromUnicode(m_codec, addressee.familyName()).constData()     << " <"
+                       << fromUnicode(m_codec, addressee.preferredEmail()).constData() << ">";
             }
         }
     }
@@ -681,7 +681,7 @@ bool CSVOutput::writeAddressee(const KABC::Addressee& addressee, std::ostream& s
         columns.append(m_template->quote() + text + m_template->quote());
     }
 
-    stream << fromUnicode(m_codec, columns.join(m_template->delimiter()));
+    stream << fromUnicode(m_codec, columns.join(m_template->delimiter())).constData();
 
     return !stream.bad();
 }
